--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
     "files.associations": {
         "*.ejs": "html",
         ".prettierrc": "properties",
-        "iostream": "cpp"
+        "iostream": "cpp",
+        "chrono": "cpp",
+        "string": "cpp"
     }
 }
