--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,6 @@
         "iostream": "cpp",
         "chrono": "cpp",
         "string": "cpp"
-    }
+    },
+    "C_Cpp.errorSquiggles": "disabled"
 }
